Revert "CON-844: stop hiding print button on IE" - so it doesn't show on production
This reverts commit a835370ef6e99f58453dea36d2aba1ae0a29ca1d.

--- a/mips/mips-web.scss
+++ b/mips/mips-web.scss
@@ -1,10 +1,6 @@
 @import './mips-variables.scss';
 
 @mixin mips-web {
-    * {
-        font-family: 'Roboto', sans-serif;
-    }
-    
     body {
         font-family: 'Roboto', sans-serif;
     }
